--- a/templates/Makefile
+++ b/templates/Makefile
@@ -6,7 +6,7 @@ LIBRARY_NAME = __template__
 # add your .c source files, one object per file, to the SOURCES
 # variable, help files will be included automatically, and for GUI
 # objects, the matching .tcl file too
-SOURCES = __template__.cpp
+SOURCES = main.cpp
 
 # list all pd objects (i.e. myobject.pd) files here, and their helpfiles will
 # be included automatically
